--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
         <link
             rel="stylesheet"
-            href="%PUBLIC_URL%/bootstrap/4.4.1/css/bootstrap.min.css"
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+            integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
             crossorigin="anonymous"
         />
         <!--
